--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/LaunchScreen.xib
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/LaunchScreen.xib
@@ -24,17 +24,19 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="swag-grape" translatesAutoresizingMaskIntoConstraints="NO" id="bun-gc-k3H">
-                    <rect key="frame" x="141" y="59" width="199" height="372"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="swag-grape" translatesAutoresizingMaskIntoConstraints="NO" id="bun-gc-k3H">
+                    <rect key="frame" x="163" y="94" width="154" height="292"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
+                <constraint firstItem="bun-gc-k3H" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="AaY-hk-6h8"/>
                 <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
                 <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
                 <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
+                <constraint firstItem="bun-gc-k3H" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="cUK-Da-LFx"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
