--- a/clients/Android/Grapevine/app/src/main/res/values/colors.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="multi_day">#8FD384</color>
+    <color name="light_grey">#999999</color>
 </resources>
