--- a/clients/Android/Grapevine/app/src/main/res/layout/manage_feeds.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/manage_feeds.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_feed"
-        android:gravity="center"
         android:textSize="@dimen/section_title"/>
     <EditText
         android:layout_width="match_parent"
@@ -54,13 +53,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/follow_feed_error"
+        android:id="@+id/feed_error_message"
         android:textColor="@color/red"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/following"
-        android:gravity="center"
         android:textSize="@dimen/section_title"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
     <ListView
