full text logo now header on navigation bar

--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -946,7 +946,7 @@
         <image name="swag-grape" width="157" height="290"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="YbQ-fN-3ob"/>
+        <segue reference="mco-2s-tLG"/>
         <segue reference="m2J-bx-KXE"/>
     </inferredMetricsTieBreakers>
 </document>
