--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="4C9-R4-X1O" firstAttribute="top" secondItem="rgt-sx-7ce" secondAttribute="bottom" constant="8" id="25y-nk-8pc"/>
                             <constraint firstItem="RPP-wG-TD6" firstAttribute="top" secondItem="CHN-9D-RWW" secondAttribute="bottom" constant="8" id="2qE-gX-Kqb"/>
@@ -211,7 +211,7 @@
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grapevine-logo-full-words" translatesAutoresizingMaskIntoConstraints="NO" id="LA0-Je-AdY">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grapevine-logo-full-words-outline2swag" translatesAutoresizingMaskIntoConstraints="NO" id="LA0-Je-AdY">
                                 <rect key="frame" x="59" y="45" width="482" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="m6w-LC-GjQ"/>
@@ -627,23 +627,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VUE-qr-9S0" customClass="CVCalendarMenuView" customModule="CVCalendar">
-                                <rect key="frame" x="20" y="64" width="560" height="50"/>
-                                <color key="backgroundColor" red="0.27450980392156865" green="0.71764705882352942" blue="0.45490196078431372" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="GRx-03-pvg"/>
-                                </constraints>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P52-3w-4NV" customClass="CVCalendarView" customModule="CVCalendar">
-                                <rect key="frame" x="20" y="114" width="560" height="300"/>
+                                <rect key="frame" x="20" y="122" width="560" height="300"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="fqw-AT-aZ5"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PFg-zw-ruZ">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PFg-zw-ruZ">
                                 <rect key="frame" x="0.0" y="422" width="600" height="134"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -693,14 +685,22 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VUE-qr-9S0" customClass="CVCalendarMenuView" customModule="CVCalendar">
+                                <rect key="frame" x="20" y="72" width="560" height="50"/>
+                                <color key="backgroundColor" red="0.27450980392156865" green="0.71764705882352942" blue="0.45490196078431372" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="GRx-03-pvg"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.87484936680000003" green="0.55476357170000001" blue="0.75155713260000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="P52-3w-4NV" firstAttribute="leading" secondItem="Vpb-u8-zxG" secondAttribute="leadingMargin" id="2ey-HE-1qC"/>
                             <constraint firstItem="P52-3w-4NV" firstAttribute="centerX" secondItem="Vpb-u8-zxG" secondAttribute="centerX" id="78J-V6-gkn"/>
                             <constraint firstItem="VUE-qr-9S0" firstAttribute="leading" secondItem="Vpb-u8-zxG" secondAttribute="leadingMargin" id="Cc3-bd-Z1H"/>
                             <constraint firstItem="PFg-zw-ruZ" firstAttribute="trailing" secondItem="Vpb-u8-zxG" secondAttribute="trailingMargin" constant="20" id="HKI-iR-RpY"/>
-                            <constraint firstItem="VUE-qr-9S0" firstAttribute="top" secondItem="TzS-Qa-fCo" secondAttribute="bottom" id="K9Q-GV-KI7"/>
+                            <constraint firstItem="VUE-qr-9S0" firstAttribute="top" secondItem="TzS-Qa-fCo" secondAttribute="bottom" constant="8" id="K9Q-GV-KI7"/>
                             <constraint firstItem="JC5-sQ-SHV" firstAttribute="top" secondItem="PFg-zw-ruZ" secondAttribute="bottom" id="UQx-fw-DNz"/>
                             <constraint firstItem="VUE-qr-9S0" firstAttribute="centerX" secondItem="Vpb-u8-zxG" secondAttribute="centerX" id="acz-B4-tX2"/>
                             <constraint firstItem="PFg-zw-ruZ" firstAttribute="top" secondItem="P52-3w-4NV" secondAttribute="bottom" constant="8" id="d8q-Cg-93A"/>
@@ -738,10 +738,10 @@
             </objects>
             <point key="canvasLocation" x="2967" y="1168"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Grapevine Navigation Controller-->
         <scene sceneID="vaL-Ne-hcT">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OyG-pm-mSW" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OyG-pm-mSW" customClass="GrapevineNavigationController" customModule="Grapevine" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="sXi-XO-rxP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -886,10 +886,10 @@
             </objects>
             <point key="canvasLocation" x="1452" y="1903"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Grapevine Navigation Controller-->
         <scene sceneID="0mP-Ea-cJk">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AkW-fN-skM" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AkW-fN-skM" customClass="GrapevineNavigationController" customModule="Grapevine" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Dck-9L-Poh">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -904,10 +904,10 @@
             </objects>
             <point key="canvasLocation" x="2975" y="404"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Grapevine Navigation Controller-->
         <scene sceneID="xFG-xU-ERF">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="p6z-Ss-da5" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="p6z-Ss-da5" customClass="GrapevineNavigationController" customModule="Grapevine" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="7ru-5A-gSY">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -922,10 +922,10 @@
             </objects>
             <point key="canvasLocation" x="1220" y="404"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Grapevine Navigation Controller-->
         <scene sceneID="rbD-0u-lcg">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Pn3-Bv-ySk" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Pn3-Bv-ySk" customClass="GrapevineNavigationController" customModule="Grapevine" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZeG-du-QbX">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -943,13 +943,13 @@
     </scenes>
     <resources>
         <image name="glyphicons-46-calendar" width="23" height="24"/>
-        <image name="grapevine-logo-full-words" width="1154" height="285"/>
+        <image name="grapevine-logo-full-words-outline2swag" width="1174" height="304"/>
         <image name="grapevineNew" width="521" height="522"/>
         <image name="purple-round-1" width="548" height="560"/>
         <image name="swag-grape" width="157" height="290"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="mco-2s-tLG"/>
-        <segue reference="m2J-bx-KXE"/>
+        <segue reference="YbQ-fN-3ob"/>
+        <segue reference="QrZ-Yx-yTX"/>
     </inferredMetricsTieBreakers>
 </document>
