Fix date display to be consistent in event feed and detail view.

--- a/clients/Android/Grapevine/app/src/main/res/layout/activity_view_event.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/activity_view_event.xml
@@ -88,9 +88,8 @@
         android:id="@+id/feed_name"
         android:text="feedname"
         android:textColor="@color/light_grey"
-        android:layout_gravity="center"
-        />
-    <TextView  android:layout_width="wrap_content"
+        android:layout_gravity="center"/>
+    <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/view_original_post"
         android:id="@+id/single_event_url"
